; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/extr_voc.c_fix_voc_sr.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/extr_voc.c_fix_voc_sr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @fix_voc_sr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fix_voc_sr(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %8 [
    i32 11111, label %5
    i32 22222, label %6
    i32 44444, label %7
  ]

5:                                                ; preds = %1
  store i32 11025, i32* %2, align 4
  br label %10

6:                                                ; preds = %1
  store i32 22050, i32* %2, align 4
  br label %10

7:                                                ; preds = %1
  store i32 44100, i32* %2, align 4
  br label %10

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  store i32 %9, i32* %2, align 4
  br label %10

10:                                               ; preds = %8, %7, %6, %5
  %11 = load i32, i32* %2, align 4
  ret i32 %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
